cmake_minimum_required(VERSION 3.0.0)
project(CMakeLists.txt VERSION 0.1.0)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
include_directories(/Users/yujinghui/Workspaces/googletest/build/usr/local/include ${PROJECT_SOURCE_DIR}/src/common)
link_directories(/Users/yujinghui/Workspaces/googletest/build/usr/local/lib)
link_libraries(gtest gmock)
enable_testing()
add_executable(CMakeLists.txt main.cpp)